--- a/packages/client/locales/cn/leo.json
+++ b/packages/client/locales/cn/leo.json
@@ -9,9 +9,9 @@
     "callsign": "呼号",
     "department": "部门",
     "officer": "警官",
-    "officerName": "官员姓名",
+    "officerName": "警官姓名",
     "noOfficers": "你还没有警官。",
-    "selectOfficer": "遴选警官",
+    "selectOfficer": "选择警官",
     "totalTime": "总时间",
     "startedAt": "开始于",
     "endedAt": "结束于",
@@ -31,11 +31,11 @@
     "notepad": "记事本",
     "plateSearch": "板材搜索",
     "weaponSearch": "武器搜索",
-    "activeOfficer": "现役军官",
-    "activeOfficers": "现役军官",
+    "activeOfficer": "可用警官",
+    "activeOfficers": "可用警官",
     "updateAOP": "更新游戏区域",
     "utilityPanel": "实用程序面板",
-    "noActiveOfficers": "没有现役警官",
+    "noActiveOfficers": "没有可用警官",
     "badgeNumber": "徽章编号",
     "areaOfPlay": "游戏区域",
     "plateOrVin": "输入 VIN 或车牌号",
@@ -50,14 +50,14 @@
     "enterAddress": "完整或部分地址",
     "noVehiclesCitizen": "该公民不拥有任何车辆。",
     "noWeaponsCitizen": "这个公民不拥有任何武器。",
-    "noTicketsCitizen": "这个公民没有任何门票。",
+    "noTicketsCitizen": "这个公民没有任何罚单。",
     "noWrittenWarnings": "该公民没有任何书面警告",
     "noArrestReports": "这个公民没有任何逮捕报告",
     "tickets": "罚单",
     "writtenWarnings": "书面警告",
     "arrestReports": "逮捕报告",
     "nameNotFound": "找不到有这个名字的公民",
-    "createWarrant": "创建认股权证",
+    "createWarrant": "创建逮捕令",
     "citizenDead": "警告：该公民死于{data}",
     "hasWarrants":"警告：这个公民有有效的逮捕令！",
     "rank": "等级",
@@ -148,7 +148,7 @@
     "mergeOfficers": "合并警官",
     "manageVehicleFlags": "管理车辆标志",
     "manageCitizenFlags": "Manage citizen flags",
-    "successCreateWarrant": "已成功为 {citizen} 创建警告",
+    "successCreateWarrant": "已成功为 {citizen} 创建逮捕令",
     "successCreateTicket": "已成功为 {citizen}创建罚单",
     "successCreateArrestReport": "已成功为 {citizen} 创建逮捕报告",
     "successCreateWarning": "已成功为 {citizen} 创建书面警告",
@@ -176,7 +176,7 @@
     "query": "查询",
     "penalCodes": "刑法典",
     "noPenalCodes": "尚未制定刑法典。",
-    "noVehiclesPendingApprovalInDmv": "没有车辆在 DMV.",
+    "noVehiclesPendingApprovalInDmv": "没有车辆在 DMV注册",
     "citizenIsConfidential": "该公民在保密部门内,因此无法搜索其信息。",
     "unitQualifications": "单位资质",
     "addQualification": "添加资格",
@@ -198,7 +198,7 @@
     "player": "玩家",
     "cadUsername": "CAD 用户名",
     "emsFd": "EMS-FD",
-    "leo": "LEO",
+    "leo": "执法人员",
     "weapon": "武器",
     "vehicle": "车辆",
     "onFoot": "步行",
