‘cn' locale fix part1 (#763)

--- a/packages/client/locales/cn/ems-fd.json
+++ b/packages/client/locales/cn/ems-fd.json
@@ -3,18 +3,18 @@
     "emsFd": "EMS/FD",
     "createMedicalRecord": "创建医疗记录",
     "searchMedicalRecord": "搜索医疗记录",
-    "activeDeputies": "积极代表",
-    "selectDeputy": "选择副手",
-    "deputy": "副手",
-    "myDeputies": "我的副手",
-    "createDeputy": "创建副手",
-    "editDeputy": "编辑副手",
-    "deputyName": "副名",
-    "deleteDeputy": "删除副手",
-    "noDeputies": "你没有任何副手",
-    "noActiveDeputies": "没有现役代表",
+    "activeDeputies": "可用人员",
+    "selectDeputy": "选择人员",
+    "deputy": "人员",
+    "myDeputies": "我的人员",
+    "createDeputy": "创建人员",
+    "editDeputy": "编辑人员",
+    "deputyName": "人员名称",
+    "deleteDeputy": "删除人员",
+    "noDeputies": "你没有任何人员",
+    "noActiveDeputies": "没有可用人员",
     "citizenNoMedicalRecords": "这个公民没有任何医疗记录。",
-    "activeDeputy": "现役副手",
+    "activeDeputy": "活跃的人员",
     "declareDead": "宣布死亡",
     "declareAlive": "宣布活着",
     "alert_deleteDeputy": "是否确实要删除 <span>{deputy}</span>？此操作无法撤消。"
