--- a/packages/client/locales/cn/leo.json
+++ b/packages/client/locales/cn/leo.json
@@ -8,10 +8,10 @@
     "deleteOfficer": "删除警官",
     "callsign": "呼号",
     "department": "部门",
-    "officer": "官员",
-    "officerName": "官员姓名",
-    "noOfficers": "你还没有军官。",
-    "selectOfficer": "遴选官员",
+    "officer": "警官",
+    "officerName": "警官姓名",
+    "noOfficers": "你还没有警官。",
+    "selectOfficer": "选择警官",
     "totalTime": "总时间",
     "startedAt": "开始于",
     "endedAt": "结束于",
@@ -31,11 +31,11 @@
     "notepad": "记事本",
     "plateSearch": "板材搜索",
     "weaponSearch": "武器搜索",
-    "activeOfficer": "现役军官",
-    "activeOfficers": "现役军官",
+    "activeOfficer": "可用警官",
+    "activeOfficers": "可用警官",
     "updateAOP": "更新游戏区域",
     "utilityPanel": "实用程序面板",
-    "noActiveOfficers": "没有现役警官",
+    "noActiveOfficers": "没有可用警官",
     "badgeNumber": "徽章编号",
     "areaOfPlay": "游戏区域",
     "plateOrVin": "输入 VIN 或车牌号",
@@ -50,14 +50,14 @@
     "enterAddress": "完整或部分地址",
     "noVehiclesCitizen": "该公民不拥有任何车辆。",
     "noWeaponsCitizen": "这个公民不拥有任何武器。",
-    "noTicketsCitizen": "这个公民没有任何门票。",
+    "noTicketsCitizen": "这个公民没有任何罚单。",
     "noWrittenWarnings": "该公民没有任何书面警告",
     "noArrestReports": "这个公民没有任何逮捕报告",
     "tickets": "罚单",
     "writtenWarnings": "书面警告",
     "arrestReports": "逮捕报告",
     "nameNotFound": "找不到有这个名字的公民",
-    "createWarrant": "创建认股权证",
+    "createWarrant": "创建逮捕令",
     "citizenDead": "警告：该公民死于{data}",
     "hasWarrants":"警告：这个公民有有效的逮捕令！",
     "rank": "等级",
@@ -123,7 +123,7 @@
     "reportedStolen": "报告被盗",
     "pendingAccessDepartment": "您仍在等待此部门的访问权限。此 CAD 已设置了一个默认部门（{defaultDepartment}）,在您被接受之前,您就位于该部门。",
     "pendingAccessDepartmentNoDefault": "您仍在等待此部门的访问权限。没有设置默认部门,因此在您被接受之前,此单元将被禁用。",
-    "editTicket": "编辑工单",
+    "editTicket": "编辑罚单",
     "editArrestReport": "编辑逮捕报告",
     "editWrittenWarning": "编辑书面警告",
     "quantity": "数量",
@@ -148,8 +148,8 @@
     "mergeOfficers": "合并警官",
     "manageVehicleFlags": "管理车辆标志",
     "manageCitizenFlags": "Manage citizen flags",
-    "successCreateWarrant": "已成功为 {citizen} 创建认股权证",
-    "successCreateTicket": "已成功为 {citizen}创建工单",
+    "successCreateWarrant": "已成功为 {citizen} 创建逮捕令",
+    "successCreateTicket": "已成功为 {citizen}创建罚单",
     "successCreateArrestReport": "已成功为 {citizen} 创建逮捕报告",
     "successCreateWarning": "已成功为 {citizen} 创建书面警告",
     "goOnDuty": "去值班",
@@ -176,7 +176,7 @@
     "query": "查询",
     "penalCodes": "刑法典",
     "noPenalCodes": "尚未制定刑法典。",
-    "noVehiclesPendingApprovalInDmv": "没有车辆在 DMV.",
+    "noVehiclesPendingApprovalInDmv": "没有车辆在 DMV注册",
     "citizenIsConfidential": "该公民在保密部门内,因此无法搜索其信息。",
     "unitQualifications": "单位资质",
     "addQualification": "添加资格",
@@ -198,7 +198,7 @@
     "player": "玩家",
     "cadUsername": "CAD 用户名",
     "emsFd": "EMS-FD",
-    "leo": "LEO",
+    "leo": "执法人员",
     "weapon": "武器",
     "vehicle": "车辆",
     "onFoot": "步行",
@@ -208,7 +208,7 @@
     "alert_deleteQualification": "您确定要删除此资格吗？此操作无法撤消",
     "alert_deleteDLExam": "是否确实要删除此驾照考试？此操作无法撤消",
     "vehicleImpoundLocation": "提供的车辆（{plate}）将在{扣押地点}扣押。您将能够在扣押地块页面上查看此车辆",
-    "alert_endIncident": "你确定要结束这件事吗？它仍然可以被军官查看",
+    "alert_endIncident": "你确定要结束这件事吗？它仍然可以被警官查看",
     "alert_deleteRecord": "是否确实要删除此记录？此操作无法撤消",
     "alert_deleteOfficer": "是否确实要删除 <span>{officer}</span>？此操作无法撤消",
     "alert_allowCheckout": "您确定要从扣押地段检查这辆车吗？",
