--- a/packages/client/locales/en/leo.json
+++ b/packages/client/locales/en/leo.json
@@ -206,6 +206,7 @@
     "identifier": "Identifier",
     "togglePlayer": "Toggle Player",
     "vehicleBoloPlaced": "This vehicle has an active BOLO.",
+    "citizenBoloPlaced": "This citizen has an active BOLO.",
     "alert_deleteQualification": "Are you sure you want to delete this qualification? This action cannot be undone.",
     "alert_deleteDLExam": "Are you sure you want to delete this driver's license exam? This action cannot be undone.",
     "vehicleImpoundLocation": "The provided vehicle ({plate}) will be impounded at {impoundLocation}. You will be able to view this vehicle on the impound lot page.",
