--- a/packages/client/locales/en/leo.json
+++ b/packages/client/locales/en/leo.json
@@ -211,6 +211,8 @@
     "addNote": "Add note",
     "manageNote": "Manage Note",
     "text": "Text",
+    "deleteNote": "Delete note",
+    "alert_deleteNote": "Are you sure you want to delete this note? This action cannot be undone.",
     "alert_deleteQualification": "Are you sure you want to delete this qualification? This action cannot be undone.",
     "alert_deleteDLExam": "Are you sure you want to delete this driver's license exam? This action cannot be undone.",
     "vehicleImpoundLocation": "The provided vehicle ({plate}) will be impounded at {impoundLocation}. You will be able to view this vehicle on the impound lot page.",
