--- a/packages/client/locales/ru/leo.json
+++ b/packages/client/locales/ru/leo.json
@@ -205,6 +205,14 @@
     "licensePlate": "Регистрационный номер",
     "identifier": "Идентификатор",
     "togglePlayer": "Переключить игрока",
+    "vehicleBoloPlaced": "Транспорт не в списке BOLO",
+    "citizenBoloPlaced": "Гражданин не в списке BOLO",
+    "noNotes": "Нет записей",
+    "addNote": "Добавить запись",
+    "manageNote": "Управлять записями",
+    "text": "Текст",
+    "deleteNote": "Удалить запись",
+    "alert_deleteNote": "Вы уверены, что хотите удалить эту запись? Это действие необратимо",
     "alert_deleteQualification": "Вы уверены, что хотите удалить квалификацию? Это действие необратимо.",
     "alert_deleteDLExam": "Вы уверены, что хотите удалить этот экзамен на получение водительских прав? Это действие необратимо.",
     "vehicleImpoundLocation": "Указанный транспорт ({plate}) будет эвакуирован в {impoundLocation}. Вы сможете просмотреть этот автомобиль на странице штрафстоянки.",
