--- a/packages/client/locales/en/admin.json
+++ b/packages/client/locales/en/admin.json
@@ -56,6 +56,9 @@
     "customRoles": "Custom Roles",
     "createCustomRole": "Create Custom Role",
     "noCustomRoles": "There are no custom roles yet.",
+    "deleteCustomRole": "Delete custom role",
+    "editCustomRole": "Edit custom role",
+    "alert_deleteCustomRole": "Are you sure you want to delete <span>{role}</span>? This action cannot be undone",
     "alert_deleteUnit": "Are you sure you want to delete <span>{unit}</span>? This action cannot be undone!",
     "alert_deleteCustomField": "Are you sure you want to delete this custom field? This action cannot be undone. All values created with this field will also be deleted.",
     "info_pendingBusinesses": "These are created businesses that are awaiting approval to be used. Accept or decline them.",
