--- a/packages/client/locales/en/admin.json
+++ b/packages/client/locales/en/admin.json
@@ -59,6 +59,7 @@
     "deleteCustomRole": "Delete custom role",
     "editCustomRole": "Edit custom role",
     "manageRoles": "Manage Roles",
+    "roles": "Roles",
     "alert_deleteCustomRole": "Are you sure you want to delete <span>{role}</span>? This action cannot be undone",
     "alert_deleteUnit": "Are you sure you want to delete <span>{unit}</span>? This action cannot be undone!",
     "alert_deleteCustomField": "Are you sure you want to delete this custom field? This action cannot be undone. All values created with this field will also be deleted.",
