--- a/packages/client/locales/en/values.json
+++ b/packages/client/locales/en/values.json
@@ -23,6 +23,7 @@
     "defaultOfficerRank": "Default Officer Rank",
     "pairedUnitTemplate": "Paired Unit Template",
     "isConfidential": "Is Confidential",
+    "priority": "Priority",
     "alert_deletePenalCodeGroup": "Are you sure you want to delete <span>{group}</span>? This action cannot be undone.",
     "alert_deleteValue": "Are you sure you want to delete <span>{value}</span>? This action cannot be undone!",
     "alert_deleteSelectedValues": "Are you sure you want to delete {length} items? This action cannot be undone"
