Updated French translation (Call Types & Minor Correction)

--- a/packages/client/locales/fr_FRA/values.json
+++ b/packages/client/locales/fr_FRA/values.json
@@ -128,5 +128,11 @@
     "ADD": "Ajouter Qualification",
     "DELETE": "Supprimer Qualification",
     "EDIT": "Modifier Qualification"
+  },
+  "CALL_TYPE": {
+    "MANAGE": "Gérer types d'appels",
+    "ADD": "Ajouter type d'appel",
+    "DELETE": "Supprimer type d'appel",
+    "EDIT": "Modifier type d'appel"
   }
 }
