--- a/packages/client/locales/fr_FRA/calls.json
+++ b/packages/client/locales/fr_FRA/calls.json
@@ -35,7 +35,7 @@
     "departments": "Départements",
     "divisions": "Divisions",
     "callFilters": "Filtres d'appel",
-    "purge": "Purgeer",
+    "purge": "Purger",
     "purgeSelected": "Purger la sélection",
     "purgeSelectedCalls": "Purger les appels sélectionnés",
     "toggleCall": "Activer l'appel",
@@ -47,6 +47,7 @@
     "911CallCreated": "Création réussie de l'appel 911.",
     "callCountyService": "Appeler le service départemental",
     "dropToUnassign": "Abandon de l'appel",
+    "type": "Type de l'appel",
     "alert_purgeSelectedCalls": "Êtes-vous sûr de vous vouloir purger {length} élément(s) ? Cela supprimera {length} élément(s) de la base de données. Cette action ne peut être annulée.",
     "alert_deleteCallEvent": "Êtes-vous sûr de vouloir supprimer cet événement ? Cette action ne peut être annulée.",
     "alert_end911Call": "Êtes-vous sûr de vouloir terminer cet appel ?",
