--- a/packages/client/locales/ru/leo.json
+++ b/packages/client/locales/ru/leo.json
@@ -212,6 +212,11 @@
     "manageNote": "Управлять записями",
     "text": "Текст",
     "deleteNote": "Удалить запись",
+    "dropToUnassignFromIncident": "Перетащите, чтобы открепить от активного инцидента",
+    "switchDivisionCallsign": "Сменить позывной",
+    "createCitizen": "Сождать гражданина",
+    "unit": "Юнит",
+    "createVehicle": "Создать транспорт",
     "alert_deleteNote": "Вы уверены, что хотите удалить эту запись? Это действие необратимо",
     "alert_deleteQualification": "Вы уверены, что хотите удалить квалификацию? Это действие необратимо.",
     "alert_deleteDLExam": "Вы уверены, что хотите удалить этот экзамен на получение водительских прав? Это действие необратимо.",
