--- a/packages/client/locales/ru/calls.json
+++ b/packages/client/locales/ru/calls.json
@@ -47,6 +47,7 @@
     "911CallCreated": "Вызов 911 создан.",
     "callCountyService": "Вызов службы округа",
     "dropToUnassign": "Перетащите, чтобы открепить от вызова",
+    "type": "Тип вызова",
     "alert_purgeSelectedCalls": "Вы уверены, что хотите удалить {length} элемент(ов)? Это действие необратимо.",
     "alert_deleteCallEvent": "Вы уверены, что хотите удалить событие? Это дейтвие необратимо.",
     "alert_end911Call": "Вы уверены, что хотите завершить вызов?",
