--- a/packages/client/locales/en_gb/account.json
+++ b/packages/client/locales/en_gb/account.json
@@ -34,7 +34,17 @@
     "stopRoleplay": "Stop roleplay",
     "addedToCall": "Added to call",
     "statusUpdate": "Status Update",
-    "incomingCall": "Incoming Call"
+    "incomingCall": "Incoming Call",
+    "dotColor": "Dot color",
+    "fullRowColor": "Full row color",
+    "userApiToken": "User Api Token",
+    "reGenerateToken": "Re-generate token",
+    "discord": "Discord",
+    "steam": "Steam",
+    "connectSteam": "Connect Steam account",
+    "disconnectSteam": "Disconnect Steam account",
+    "disconnectSteamText": "This will remove the ability to login via Steam.",
+    "connectSteamText": "This will add the ability to login via Steam."
   },
   "Notifications": {
     "CITIZEN_DELETED": "<span>{citizen}</span> was deleted. Reason: {reason}"
