--- a/packages/client/locales/en_gb/citizen.json
+++ b/packages/client/locales/en_gb/citizen.json
@@ -31,6 +31,7 @@
     "pilotLicenseCategory": "Pilot License Categories",
     "waterLicense": "Boating License",
     "waterLicenseCategory": "Boating License Categories",
+    "firearmLicenseCategory": "Firearm License Categories",
     "ccw": "CCW",
     "createTaxiCall": "Create Taxi Call",
     "create911Call": "Create 999 Call",
@@ -64,6 +65,7 @@
     "untaxed": "Untaxed",
     "passed": "Passed",
     "failed": "Failed",
+    "inProgress": "In Progress",
     "vehicleImpounded": "This vehicle is impounded",
     "successVehicleRegistered": "Successfully registered a vehicle with registration: {plate}",
     "dmvStatus": "DVLA Status",
@@ -90,6 +92,7 @@
     "deleteMedicalRecord": "Delete Medical Record",
     "bloodGroup": "Blood group",
     "diseases": "Diseases",
+    "info_bloodgroup": "Note: updating your bloodgroup will update all other medical records' bloodgroup",
     "alert_deleteMedicalRecord": "Are you sure you want to delete this medical record? This action cannot be undone."
   }
 }
