--- a/packages/client/locales/en_gb/common.json
+++ b/packages/client/locales/en_gb/common.json
@@ -48,7 +48,10 @@
     "openInSearch": "Open in search",
     "goBack": "Go back",
     "success": "Success",
-    "currency": "£"
+    "currency": "£",
+    "left": "Left",
+    "right": "Right",
+    "user": "User"
   },
   "Nav": {
     "citizen": "Civilian",
@@ -130,6 +133,16 @@
     "alreadyPendingNameChange": "This civilian already has a pending name change request.",
     "nameChangeRequestNotNew": "To create a name change request, the new name cannot match the previous name.",
     "socketError": "Socket connection error",
-    "socketErrorInfo": "Connection to the API has been disconnected. Please re-connect to the internet or reload the browser window."
+    "socketErrorInfo": "Connection to the API has been disconnected. Please re-connect to the internet or reload the browser window.",
+    "fine_invalidDataReceived": "Invalid fines data received. Min: {min}, max: {max}",
+    "jailTime_invalidDataReceived": "Invalid sentence data received. Min: {min}, max: {max}",
+    "bail_invalidDataReceived": "Invalid bail data received. Min: {min}, max: {max}",
+    "forbidden": "Forbidden",
+    "pageNotFound": "Page Not Found",
+    "unitCallsignInUse": "This full callsign is already in-use by another unit. Please specify another callsign.",
+    "steamNameInUse": "Could not create a new account with Steam since the username is already in-use.",
+    "steamAccountAlreadyLinked": "This Steam account is already linked to another account.",
+    "cannotRegisterFirstWithSteam": "The first account must be registered without Steam. You can link Steam once the account is created.",
+    "Unauthorized": "You have been logged out. Please log back in to continue."
   }
 }
