--- a/packages/client/locales/en_gb/leo.json
+++ b/packages/client/locales/en_gb/leo.json
@@ -61,6 +61,7 @@
     "citizenDead": "WARNING: This citizen was marked as deceased on {date}.",
     "hasWarrants": "WARNING: This citizen has active warrants!",
     "rank": "Rank",
+    "position": "Position",
     "officerLogs": "Officer Logs",
     "disableSignal100": "Disable Control",
     "enableSignal100": "Enable Control",
@@ -176,7 +177,48 @@
     "penalCodes": "Charges",
     "noPenalCodes": "There have been no charges created yet.",
     "noVehiclesPendingApprovalInDmv": "There are no vehicles pending approval in the DVLA.",
-    "citizenIsConfidential": "This civilian's records are sealed and it's information cannot be searched.",
+    "citizenIsConfidential": "MoPI Notice: This civilians records are sealed.",
+    "unitQualifications": "Officer Qualifications",
+    "addQualification": "Add Qualification",
+    "noQualifications": "This unit does not have any qualifications yet",
+    "qualification": "Qualification",
+    "suspend": "Suspend",
+    "unsuspend": "Unsuspend",
+    "deleteQualification": "Delete Qualification",
+    "assignedAt": "Assigned at",
+    "suspendedOn": "Suspended on: ",
+    "unitAwards": "Unit Awards",
+    "noAwards": "This unit has no awards yet.",
+    "addAward": "Add Award",
+    "award": "Award",
+    "activeCall": "Active Call",
+    "arrestReportLogs": "Arrest Report Logs",
+    "activeUnits": "Active Units",
+    "noActiveUnits": "There are no active units on the live map.",
+    "player": "Player",
+    "cadUsername": "CAD Username",
+    "emsFd": "Emergency Services",
+    "leo": "Police",
+    "weapon": "Weapon",
+    "vehicle": "Vehicle",
+    "onFoot": "On Foot",
+    "licensePlate": "Registration",
+    "identifier": "Identifier",
+    "togglePlayer": "Toggle Player",
+    "vehicleBoloPlaced": "This vehicle has an active remark.",
+    "citizenBoloPlaced": "This civilian has an active remark.",
+    "noNotes": "There are no notes yet.",
+    "addNote": "Add note",
+    "manageNote": "Manage Note",
+    "text": "Text",
+    "deleteNote": "Delete note",
+    "dropToUnassignFromIncident": "Drop to unassign from active incident",
+    "switchDivisionCallsign": "Switch callsign",
+    "createCitizen": "Create civilian",
+    "unit": "Unit",
+    "createVehicle": "Create Vehicle",
+    "alert_deleteNote": "Are you sure you want to delete this note? This action cannot be undone.",
+    "alert_deleteQualification": "Are you sure you want to delete this qualification? This action cannot be undone.",
     "alert_deleteDLExam": "Are you sure you want to delete this driver's license exam? This action cannot be undone.",
     "vehicleImpoundLocation": "The provided vehicle ({plate}) will be impounded at {impoundLocation}. You will be able to view this vehicle on the impound lot page.",
     "alert_endIncident": "Are you sure you want to end this incident. It can still be viewed by officers.",
@@ -194,6 +236,10 @@
     "createBolo": "Create Remark",
     "typeBolos": "{type} remarks",
     "noActiveBolosForType": "No active remarks for type: {type}",
-    "alert_deleteBolo": "Are you sure you want to delete this remark? This action cannot be undone"
+    "alert_deleteBolo": "Are you sure you want to delete this remark? This action cannot be undone",
+    "person": "person",
+    "vehicle": "vehicle",
+    "other": "other",
+    "stolen": "stolen"
   }
 }
