:hammer: chore: add translations

--- a/packages/client/locales/en/courthouse.json
+++ b/packages/client/locales/en/courthouse.json
@@ -30,6 +30,7 @@
     "deleteCourthousePost": "Delete courthouse post",
     "addCourthousePost": "Add courthouse post",
     "noCourthousePosts": "There are no courthouse posts yet.",
+    "alert_deleteCourthousePost": "Are you sure you want to delete this post? This action cannot be undone.",
     "alert_deleteCourtEntry": "Are you sure you want to delete this entry? This action cannot be undone.",
     "alert_deleteCourtDate": "Are you sure you want to delete this court date? This action cannot be undone."
   }
