💬 Update 'ru' locale - delete unnecessary dot symbol

--- a/packages/client/locales/ru/courthouse.json
+++ b/packages/client/locales/ru/courthouse.json
@@ -8,7 +8,7 @@
     "expungementRequests": "Запросы на удаление",
     "nameChangeRequests": "Запросы на изменение имени",
     "requestNameChange": "Запросить изменение имени",
-    "noNameChangeRequests": "Запросов на смену имени нет.",
+    "noNameChangeRequests": "Запросов на смену имени нет",
     "newName": "Новое имя",
     "newSurname": "новая фамилия",
     "status": "Статус",
