--- a/packages/client/locales/en/leo.json
+++ b/packages/client/locales/en/leo.json
@@ -217,6 +217,13 @@
     "createCitizen": "Create citizen",
     "unit": "Unit",
     "createVehicle": "Create Vehicle",
+    "tones": "Tones",
+    "notesInfo": "Send out a notification tone with an optional message to alert LEO or EMS/FD",
+    "emsFdTone": "EMS/FD Tone",
+    "leoTone": "LEO Tone",
+    "sendTone": "Send Tone",
+    "toneSuccess": "Successfully sent out the tones to the selected forces",
+    "toneNotification": "Tone Notification",
     "alert_deleteNote": "Are you sure you want to delete this note? This action cannot be undone.",
     "alert_deleteQualification": "Are you sure you want to delete this qualification? This action cannot be undone.",
     "alert_deleteDLExam": "Are you sure you want to delete this driver's license exam? This action cannot be undone.",
