--- a/packages/client/locales/en/leo.json
+++ b/packages/client/locales/en/leo.json
@@ -224,6 +224,7 @@
     "sendTone": "Send Tone",
     "toneSuccess": "Successfully sent out the tones to the selected forces",
     "toneNotification": "Tone Notification",
+    "unitWillBePlacedOffDuty": "Your unit will be placed off-duty soon because it has been inactive for some time. Please change the status of your unit to continue using it for this session.",
     "alert_deleteNote": "Are you sure you want to delete this note? This action cannot be undone.",
     "alert_deleteQualification": "Are you sure you want to delete this qualification? This action cannot be undone.",
     "alert_deleteDLExam": "Are you sure you want to delete this driver's license exam? This action cannot be undone.",
