💬 Update 'ru' locale

--- a/packages/client/locales/ru/citizen.json
+++ b/packages/client/locales/ru/citizen.json
@@ -69,6 +69,9 @@
     "vehicleImpounded": "Транспорт эвакуирован",
     "successVehicleRegistered": "Транспорт успешно зарегистрирован с номерным знаком: {plate}",
     "dmvStatus": "Статус DMV",
+    "transfer": "Смена владельца",
+    "transferVehicle": "Сменить владельца ТС",
+    "transferVehicleInfo": "Зарегистрирует ваш <span>{model}</span> на другое лицо. Это означает, что вы потеряете контроль над этим ТС и не сможете управлять им в будущем.",
     "alert_deleteVehicle": "Вы уверены, что хотите удалить этот транспорт? Это действие необратимо."
   },
   "Weapons": {
