--- a/packages/client/locales/ru/leo.json
+++ b/packages/client/locales/ru/leo.json
@@ -217,6 +217,13 @@
     "createCitizen": "Сождать гражданина",
     "unit": "Юнит",
     "createVehicle": "Создать транспорт",
+    "tones": "Сигналы",
+    "notesInfo": "Отправить сигнал с сообщением, чтобы уведомить LEO или EMS/FD",
+    "emsFdTone": "Сигнал EMS/FD",
+    "leoTone": "Сигнал LEO",
+    "sendTone": "Отправить сигнал",
+    "toneSuccess": "Сигналы выбранным департаментам успешно отправлены",
+    "toneNotification": "Уведомление сигнала",
     "alert_deleteNote": "Вы уверены, что хотите удалить эту запись? Это действие необратимо",
     "alert_deleteQualification": "Вы уверены, что хотите удалить квалификацию? Это действие необратимо.",
     "alert_deleteDLExam": "Вы уверены, что хотите удалить этот экзамен на получение водительских прав? Это действие необратимо.",
