--- a/packages/client/locales/ru/truck-logs.json
+++ b/packages/client/locales/ru/truck-logs.json
@@ -9,6 +9,7 @@
     "startedAt": "Погрузка",
     "endedAt": "Выгрузка",
     "noTruckLogs": "У вас нет журналов грузоперевозок.",
+    "notes": "Записи",
     "alert_deleteTruckLog": "Вы уверены, что хотите удалить запись о грузоперевозке? Это действие необратимо."
   }
 }
