--- a/packages/client/locales/en/values.json
+++ b/packages/client/locales/en/values.json
@@ -24,6 +24,7 @@
     "pairedUnitTemplate": "Paired Unit Template",
     "isConfidential": "Is Confidential",
     "priority": "Priority",
+    "isDisabled": "Disabled",
     "alert_deletePenalCodeGroup": "Are you sure you want to delete <span>{group}</span>? This action cannot be undone.",
     "alert_deleteValue": "Are you sure you want to delete <span>{value}</span>? This action cannot be undone!",
     "alert_deleteSelectedValues": "Are you sure you want to delete {length} items? This action cannot be undone"
