--- a/packages/client/locales/en/account.json
+++ b/packages/client/locales/en/account.json
@@ -44,7 +44,8 @@
     "connectSteam": "Connect Steam account",
     "disconnectSteam": "Disconnect Steam account",
     "disconnectSteamText": "This will remove the ability to login via Steam.",
-    "connectSteamText": "This will add the ability to login via Steam."
+    "connectSteamText": "This will add the ability to login via Steam.",
+    "locale": "Locale"
   },
   "Notifications": {
     "CITIZEN_DELETED": "<span>{citizen}</span> was deleted. Reason: {reason}"
