:tada: feat: able to provide open graph description

--- a/packages/client/locales/en/common.json
+++ b/packages/client/locales/en/common.json
@@ -51,7 +51,8 @@
     "currency": "$",
     "left": "Left",
     "right": "Right",
-    "user": "User"
+    "user": "User",
+    "savedSettingsSuccess": "Settings successfully saved."
   },
   "Nav": {
     "citizen": "Citizen",
