--- a/packages/client/locales/ru/common.json
+++ b/packages/client/locales/ru/common.json
@@ -51,7 +51,8 @@
     "currency": "$",
     "left": "Слева",
     "right": "Справа",
-    "user": "Пользователь"
+    "user": "Пользователь",
+    "savedSettingsSuccess": "Настройки успешно сохранены"
   },
   "Nav": {
     "citizen": "Гражданин",
