--- a/packages/client/locales/ru/values.json
+++ b/packages/client/locales/ru/values.json
@@ -24,6 +24,7 @@
     "pairedUnitTemplate": "Шаблон парного юнита",
     "isConfidential": "Конфиденциально",
     "priority": "Приоритет",
+    "isDisabled": "Отключено",
     "alert_deletePenalCodeGroup": "Вы уверены, что хотите удалить <span>{group}</span>? Это действие необратимо.",
     "alert_deleteValue": "Вы уверены, что хотите удалить <span>{value}</span>? Это действие необратимо.",
     "alert_deleteSelectedValues": "Вы уверены, что хотите удалить {length} элемент (ов)? Это действие необратимо."
