--- a/packages/client/locales/ru/leo.json
+++ b/packages/client/locales/ru/leo.json
@@ -205,8 +205,8 @@
     "licensePlate": "Регистрационный номер",
     "identifier": "Идентификатор",
     "togglePlayer": "Переключить игрока",
-    "vehicleBoloPlaced": "Транспорт не в списке BOLO",
-    "citizenBoloPlaced": "Гражданин не в списке BOLO",
+    "vehicleBoloPlaced": "Транспорт в списке BOLO",
+    "citizenBoloPlaced": "Гражданин в списке BOLO",
     "noNotes": "Нет записей",
     "addNote": "Добавить запись",
     "manageNote": "Управлять записями",
