:tada: feat: improve login/register UI

--- a/packages/client/locales/en/auth.json
+++ b/packages/client/locales/en/auth.json
@@ -18,6 +18,7 @@
     "loginViaDiscord": "Login via Discord",
     "continueAs": "Continue as {username}",
     "sixDigitCode": "Please enter the 6-digit code from your authenticator app",
-    "loginViaSteam": "Login via Steam"
+    "loginViaSteam": "Login via Steam",
+    "or": "OR"
   }
 }
