:tada: feat: Custom permission roles (#786)

--- a/packages/client/locales/en/admin.json
+++ b/packages/client/locales/en/admin.json
@@ -10,6 +10,7 @@
     "MANAGE_NAME_CHANGE_REQUESTS": "Manage Name Change Requests",
     "MANAGE_CAD_SETTINGS": "CAD Settings",
     "MANAGE_CUSTOM_FIELDS": "Manage Custom Fields",
+    "MANAGE_CUSTOM_ROLES": "Manage Custom Roles",
     "MANAGE_COURTHOUSE": "Manage Courthouse",
     "import": "Import",
     "IMPORT_CITIZENS": "Import Citizens",
@@ -52,6 +53,14 @@
     "deleteCustomField": "Delete Custom Field",
     "deleteUnit": "Delete Unit",
     "callsignManagement": "Callsign Management",
+    "customRoles": "Custom Roles",
+    "createCustomRole": "Create Custom Role",
+    "noCustomRoles": "There are no custom roles yet.",
+    "deleteCustomRole": "Delete custom role",
+    "editCustomRole": "Edit custom role",
+    "manageRoles": "Manage Roles",
+    "roles": "Roles",
+    "alert_deleteCustomRole": "Are you sure you want to delete <span>{role}</span>? This action cannot be undone",
     "alert_deleteUnit": "Are you sure you want to delete <span>{unit}</span>? This action cannot be undone!",
     "alert_deleteCustomField": "Are you sure you want to delete this custom field? This action cannot be undone. All values created with this field will also be deleted.",
     "info_pendingBusinesses": "These are created businesses that are awaiting approval to be used. Accept or decline them.",
