💬 Update 'ru' locale

--- a/packages/client/locales/ru/account.json
+++ b/packages/client/locales/ru/account.json
@@ -45,7 +45,8 @@
     "disconnectSteam": "Отключить аккаунт Steam",
     "disconnectSteamText": "Это действие отключит возможность входить через Steam.",
     "connectSteamText": "Это действие включит возможность входить через Steam.",
-    "locale": "Локализация"
+    "locale": "Локализация",
+    "viewMyPermissions": "Посмотреть мои разрешения"
   },
   "Notifications": {
     "CITIZEN_DELETED": "<span>{citizen}</span> был удалён. Причина: {reason}"
