--- a/packages/client/locales/ru/admin.json
+++ b/packages/client/locales/ru/admin.json
@@ -10,6 +10,7 @@
     "MANAGE_NAME_CHANGE_REQUESTS": "Управление запросами на изменение имени",
     "MANAGE_CAD_SETTINGS": "CAD",
     "MANAGE_CUSTOM_FIELDS": "Пользовательские поля",
+    "MANAGE_CUSTOM_ROLES": "Пользовательские роли",
     "MANAGE_COURTHOUSE": "Суды",
     "import": "Импорт",
     "IMPORT_CITIZENS": "Импорт граждан",
@@ -52,6 +53,14 @@
     "deleteCustomField": "Удалить пользовательское поле",
     "deleteUnit": "Удалить юнит",
     "callsignManagement": "Позывные",
+    "customRoles": "Пользовательские роли",
+    "createCustomRole": "Создать пользовательскую роль",
+    "noCustomRoles": "Нет пользовательских ролей",
+    "deleteCustomRole": "Удалить пользовательскую роль",
+    "editCustomRole": "Редактировать пользовательскую роль",
+    "manageRoles": "Управление ролями",
+    "roles": "Роли",
+    "alert_deleteCustomRole": "Вы уверены, что хотите удалить <span>{role}</span>? Это действие необратимо",
     "alert_deleteUnit": "Вы уверены, что хотите удалить <span>{unit}</span>? Это действие необратимо!",
     "alert_deleteCustomField": "Вы уверены, что хотите удалить это пользовательско поле? Это действие необратимо. Все записи, созданные с этим полем будут удалены.",
     "info_pendingBusinesses": "Компании, ожидающие подтверждения. Примите или отклоните их.",
