--- a/packages/client/locales/ru/auth.json
+++ b/packages/client/locales/ru/auth.json
@@ -18,6 +18,7 @@
     "loginViaDiscord": "Войти через Discord",
     "continueAs": "Продолжить, как {username}",
     "sixDigitCode": "Введите 6-значный код из приложения-аутентификатора",
-    "loginViaSteam": "Войти через Steam"
+    "loginViaSteam": "Войти через Steam",
+    "or": "ИЛИ"
   }
 }
