--- a/packages/client/locales/ru/common.json
+++ b/packages/client/locales/ru/common.json
@@ -85,7 +85,9 @@
     "courthouse": "Суд",
     "dlExams": "Экзамен на водительскую лицензию",
     "dmv": "Департамент транспортных средств",
-    "penalCodes": "Статьи"
+    "penalCodes": "Статьи",
+    "weaponExams": "Экзамены на владение оружием",
+    "myDeputyLogs": "Логи моих помощников"
   },
   "Errors": {
     "unknown": "Произошла непредвиденная ошибка",
