:tada: feat: able to add priority status values

--- a/packages/client/locales/en/values.json
+++ b/packages/client/locales/en/values.json
@@ -136,5 +136,11 @@
     "ADD": "Add Call Type",
     "DELETE": "Delete Call Type",
     "EDIT": "Edit Call Type"
+  },
+  "PRIORITY_STATUS": {
+    "MANAGE": "Manage Priority Statuses",
+    "ADD": "Add Priority Status",
+    "DELETE": "Delete Priority Status",
+    "EDIT": "Edit Priority Status"
   }
 }
