--- a/packages/client/locales/en_gb/account.json
+++ b/packages/client/locales/en_gb/account.json
@@ -44,7 +44,9 @@
     "connectSteam": "Connect Steam account",
     "disconnectSteam": "Disconnect Steam account",
     "disconnectSteamText": "This will remove the ability to login via Steam.",
-    "connectSteamText": "This will add the ability to login via Steam."
+    "connectSteamText": "This will add the ability to login via Steam.",
+    "locale": "Locale",
+    "viewMyPermissions": "View my permissions"
   },
   "Notifications": {
     "CITIZEN_DELETED": "<span>{citizen}</span> was deleted. Reason: {reason}"
