--- a/packages/client/locales/en_gb/calls.json
+++ b/packages/client/locales/en_gb/calls.json
@@ -46,6 +46,8 @@
     "taxiCallCreated": "Successfully created the taxi call.",
     "911CallCreated": "Successfully created the 999 call.",
     "callCountyService": "Call Local Service",
+    "dropToUnassign": "Drop to unassign from call",
+    "type": "Call Type",
     "alert_purgeSelectedCalls": "Are you sure you want to purge {length} item(s)? This will delete {length} item(s) from the database. This action cannot be undone.",
     "alert_deleteCallEvent": "Are you sure you want to delete this event? This action cannot be undone.",
     "alert_end911Call": "Are you sure you want to end this call?",
