--- a/packages/client/locales/en_gb/citizen.json
+++ b/packages/client/locales/en_gb/citizen.json
@@ -69,6 +69,9 @@
     "vehicleImpounded": "This vehicle is impounded",
     "successVehicleRegistered": "Successfully registered a vehicle with registration: {plate}",
     "dmvStatus": "DVLA Status",
+    "transfer": "Transfer",
+    "transferVehicle": "Transfer Vehicle",
+    "transferVehicleInfo": "Transfer your <span>{model}</span> to a new owner. This means you will lose ownership of this vehicle and will be unable to manage it further.",
     "alert_deleteVehicle": "Are you sure you want to delete this vehicle? This action cannot be undone."
   },
   "Weapons": {
