--- a/packages/client/locales/en_gb/courthouse.json
+++ b/packages/client/locales/en_gb/courthouse.json
@@ -25,6 +25,12 @@
     "date": "Date",
     "note": "Note",
     "deleteCourtDate": "Delete court date",
+    "courthousePosts": "Courthouse posts",
+    "manageCourthousePost": "Manage courthouse post",
+    "deleteCourthousePost": "Delete courthouse post",
+    "addCourthousePost": "Add courthouse post",
+    "noCourthousePosts": "There are no courthouse posts yet.",
+    "alert_deleteCourthousePost": "Are you sure you want to delete this post? This action cannot be undone.",
     "alert_deleteCourtEntry": "Are you sure you want to delete this entry? This action cannot be undone.",
     "alert_deleteCourtDate": "Are you sure you want to delete this court date? This action cannot be undone."
   }
