--- a/packages/client/locales/en_gb/leo.json
+++ b/packages/client/locales/en_gb/leo.json
@@ -217,9 +217,22 @@
     "createCitizen": "Create civilian",
     "unit": "Unit",
     "createVehicle": "Create Vehicle",
+    "tones": "Tones",
+    "notesInfo": "Send out a notification tone with an optional message to alert LEO or EMS/FD",
+    "emsFdTone": "EMS/FD Tone",
+    "leoTone": "LEO Tone",
+    "sendTone": "Send Tone",
+    "toneSuccess": "Successfully sent out the tones to the selected forces",
+    "toneNotification": "Tone Notification",
+    "weaponExams": "Weapon's license exams",
+    "noWeaponExams": "There are no weapon's license exams yet.",
+    "editWeaponExam": "Edit Weapon's license exam",
+    "createWeaponExam": "Create Weapon's license exam",
+    "deleteWeaponExam": "Delete Weapon's license exam",
     "alert_deleteNote": "Are you sure you want to delete this note? This action cannot be undone.",
     "alert_deleteQualification": "Are you sure you want to delete this qualification? This action cannot be undone.",
     "alert_deleteDLExam": "Are you sure you want to delete this driver's license exam? This action cannot be undone.",
+    "alert_deleteWeaponExam": "Are you sure you want to delete this weapon's license exam? This action cannot be undone.",
     "vehicleImpoundLocation": "The provided vehicle ({plate}) will be impounded at {impoundLocation}. You will be able to view this vehicle on the impound lot page.",
     "alert_endIncident": "Are you sure you want to end this incident. It can still be viewed by officers.",
     "alert_deleteRecord": "Are you sure you want to delete this record? This action cannot be undone.",
