--- a/packages/client/locales/en_gb/truck-logs.json
+++ b/packages/client/locales/en_gb/truck-logs.json
@@ -9,6 +9,7 @@
     "startedAt": "Started At",
     "endedAt": "Ended At",
     "noTruckLogs": "You don't have any truck logs yet.",
+    "notes": "Notes",
     "alert_deleteTruckLog": "Are you sure you want to delete this truck log? This action cannot be undone."
   }
 }
