--- a/packages/client/locales/en/leo.json
+++ b/packages/client/locales/en/leo.json
@@ -229,6 +229,8 @@
     "editWeaponExam": "Edit Weapon's license exam",
     "createWeaponExam": "Create Weapon's license exam",
     "deleteWeaponExam": "Delete Weapon's license exam",
+    "activeWarrants": "Active Warrants",
+    "noActiveWarrants": "There are no active warrants.",
     "alert_deleteNote": "Are you sure you want to delete this note? This action cannot be undone.",
     "alert_deleteQualification": "Are you sure you want to delete this qualification? This action cannot be undone.",
     "alert_deleteDLExam": "Are you sure you want to delete this driver's license exam? This action cannot be undone.",
