:hammer: chore(en_gb): update translations
Made some errors in d04caac8

--- a/packages/client/locales/en_gb/citizen.json
+++ b/packages/client/locales/en_gb/citizen.json
@@ -56,7 +56,7 @@
     "noVehicles": "You do not have any vehicles registered yet.",
     "deleteVehicle": "Delete Vehicle",
     "reportAsStolen": "Report as stolen",
-    "reApplyForDmv": "Re-apply for DVLA",
+    "reApplyForDmv": "Re-apply for Driving License",
     "registeredVehicles": "Registered Vehicles",
     "flags": "Flags",
     "inspectionStatus": "MOT Status",
