--- a/packages/client/locales/en_gb/account.json
+++ b/packages/client/locales/en_gb/account.json
@@ -31,14 +31,14 @@
     "sounds": "Sounds",
     "panicButton": "Panic Button",
     "signal100": "Control",
-    "stopRoleplay": "Stop roleplay",
+    "stopRoleplay": "Stop Event",
     "addedToCall": "Added to call",
     "statusUpdate": "Status Update",
     "incomingCall": "Incoming Call",
-    "dotColor": "Dot color",
-    "fullRowColor": "Full row color",
+    "dotColor": "Dot Colour",
+    "fullRowColor": "Full Row Colour",
     "userApiToken": "User Api Token",
-    "reGenerateToken": "Re-generate token",
+    "reGenerateToken": "Re-generate Token",
     "discord": "Discord",
     "steam": "Steam",
     "connectSteam": "Connect Steam account",
