--- a/packages/client/locales/en_gb/common.json
+++ b/packages/client/locales/en_gb/common.json
@@ -146,6 +146,8 @@
     "steamNameInUse": "Could not create a new account with Steam since the username is already in-use.",
     "steamAccountAlreadyLinked": "This Steam account is already linked to another account.",
     "cannotRegisterFirstWithSteam": "The first account must be registered without Steam. You can link Steam once the account is created.",
-    "Unauthorized": "You have been logged out. Please log back in to continue."
+    "Unauthorized": "You have been logged out. Please log back in to continue.",
+    "captchaRequired": "An error occurred trying to validate your CAPTCHA. Please try again later.",
+    "invalidCaptcha": "We were unable to verify you are a human. Please contact an administrator if you think this is an error."
   }
 }
