--- a/packages/client/locales/en_gb/leo.json
+++ b/packages/client/locales/en_gb/leo.json
@@ -18,13 +18,13 @@
     "notEndedYet": "Not ended yet.",
     "status": "Status",
     "citizen": "Civilian",
-    "postal": "Postcode",
+    "postal": "Postal",
     "notes": "Notes",
     "violations": "Charges",
     "division": "Division(s)",
-    "createTicket": "Create FPN",
+    "createTicket": "Create Caution",
     "createArrestReport": "Create Arrest Report",
-    "createWrittenWarning": "Create Caution",
+    "createWrittenWarning": "Create FPN",
     "createBolo": "Create Remark",
     "nameSearch": "Name Search",
     "addressSearch": "Address Search",
@@ -50,11 +50,11 @@
     "enterAddress": "Full or partial address",
     "noVehiclesCitizen": "This civilian does not own any vehicles.",
     "noWeaponsCitizen": "This civilian does not own any weapons.",
-    "noTicketsCitizen": "This civilian does not have any FPNs.",
-    "noWrittenWarnings": "This civilian does not have any cautions.",
+    "noTicketsCitizen": "This civilian does not have any cautions.",
+    "noWrittenWarnings": "This civilian does not have any FPNs.",
     "noArrestReports": "This civilian does not have any arrest reports",
-    "tickets": "Fixed Penalty Notice",
-    "writtenWarnings": "Cautions",
+    "tickets": "Cautions",
+    "writtenWarnings": "Fixed Penalty Notices",
     "arrestReports": "Arrest Reports",
     "nameNotFound": "Could not find a civilian with that name",
     "createWarrant": "Create Warrant",
@@ -123,9 +123,9 @@
     "reportedStolen": "Reported Stolen",
     "pendingAccessDepartment": "You are still awaiting access for this department. This CAD has set a default department ({defaultDepartment}) that you are in until you're accepted.",
     "pendingAccessDepartmentNoDefault": "You are still awaiting access for this department. There is not default department set so this officer will be disabled until you're accepted.",
-    "editTicket": "Edit FPN",
+    "editTicket": "Edit Caution",
     "editArrestReport": "Edit Arrest Report",
-    "editWrittenWarning": "Edit Caution",
+    "editWrittenWarning": "Edit FPN",
     "quantity": "Quantity",
     "illegal": "Illegal",
     "add": "Add",
@@ -149,9 +149,9 @@
     "manageVehicleFlags": "Manage vehicle flags",
     "manageCitizenFlags": "Manage civilian flags",
     "successCreateWarrant": "Successfully created a warrant for {citizen}",
-    "successCreateTicket": "Successfully created a FPN for {citizen}",
+    "successCreateTicket": "Successfully created a caution for {citizen}",
     "successCreateArrestReport": "Successfully created an arrest report for {citizen}",
-    "successCreateWarning": "Successfully created a caution for {citizen}",
+    "successCreateWarning": "Successfully created a FPN for {citizen}",
     "goOnDuty": "Go On-duty",
     "goOffDuty": "Go Off-duty",
     "officers": "Officers",
@@ -229,6 +229,8 @@
     "editWeaponExam": "Edit Weapon's license exam",
     "createWeaponExam": "Create Weapon's license exam",
     "deleteWeaponExam": "Delete Weapon's license exam",
+    "activeWarrants": "Active Warrants",
+    "noActiveWarrants": "There are no active warrants.",
     "alert_deleteNote": "Are you sure you want to delete this note? This action cannot be undone.",
     "alert_deleteQualification": "Are you sure you want to delete this qualification? This action cannot be undone.",
     "alert_deleteDLExam": "Are you sure you want to delete this driver's license exam? This action cannot be undone.",
