--- a/packages/client/locales/en_gb/admin.json
+++ b/packages/client/locales/en_gb/admin.json
@@ -38,9 +38,9 @@
     "whitelisted": "Whitelisted",
     "declineUnit": "Decline Unit",
     "action": "Action",
-    "noPendingOfficers": "There are no officers pending access to a department.",
+    "noPendingOfficers": "There are no officers pending access to a force.",
     "allUnits": "All Units",
-    "departmentWhitelisting": "Department Whitelisting ({length})",
+    "departmentWhitelisting": "Force Whitelisting ({length})",
     "importViaFile": "Import via file",
     "managePermissions": "Manage Permissions",
     "detailedPermissions": "Detailed Permissions",
