:hammer: chore(en_gb): update translations (#988)
* :hammer: chore(en_gb): update translations

Made some errors in d04caac8

* Update admin.json

* Update packages/client/locales/en_gb/admin.json

Co-authored-by: Casper <53900565+Dev-CasperTheGhost@users.noreply.github.com>

--- a/packages/client/locales/en_gb/admin.json
+++ b/packages/client/locales/en_gb/admin.json
@@ -6,7 +6,7 @@
     "MANAGE_BUSINESSES": "Manage Businesses",
     "MANAGE_USERS": "Manage Users",
     "MANAGE_UNITS": "Manage Units",
-    "MANAGE_EXPUNGEMENT_REQUESTS": "Manage Sealing Requests",
+    "MANAGE_EXPUNGEMENT_REQUESTS": "Manage Record Seal Requests",
     "MANAGE_NAME_CHANGE_REQUESTS": "Manage Deed Poll Requests",
     "MANAGE_CAD_SETTINGS": "CAD Settings",
     "MANAGE_CUSTOM_FIELDS": "Manage Custom Fields",
@@ -19,9 +19,9 @@
     "allUsers": "All Users",
     "pendingUsers": "Pending Users",
     "viewInfo": "View Info",
-    "noCitizens": "There are no civilians for this CAD yet.",
-    "noBusinesses": "There are no businesses for this CAD yet.",
-    "noUnits": "There are no units yet",
+    "noCitizens": "There are no civilians yet...",
+    "noBusinesses": "There are no businesses yet...",
+    "noUnits": "There are no units yet...",
     "user": "User",
     "owner": "Owner",
     "GENERAL_SETTINGS": "General Settings",
@@ -31,12 +31,12 @@
     "giveTempPassword": "Give Temporary Password",
     "continue": "Yes, continue.",
     "reGenerateToken": "Re-generate Token",
-    "inBolo": "tagged",
+    "inBolo": "Remarked",
     "pendingBusinesses": "Pending Businesses",
     "status": "Status",
     "allBusinesses": "All Businesses",
     "whitelisted": "Whitelisted",
-    "declineOfficer": "Decline Officer",
+    "declineOfficer": "Decline Unit",
     "action": "Action",
     "noPendingOfficers": "There are no officers pending access to a force.",
     "allUnits": "All Units",
