💬 Update 'ru' locale

--- a/packages/client/locales/ru/common.json
+++ b/packages/client/locales/ru/common.json
@@ -146,6 +146,8 @@
     "steamNameInUse": "Не удалось создать новый аккаунт с таким Steam, имя пользователя уже используется.",
     "steamAccountAlreadyLinked": "Этот Steam аккаунт уже привязан к другому аккаунту.",
     "cannotRegisterFirstWithSteam": "Первый аккаунт должен быть зарегистрирован без Steam. Вы можете подключить Steam после создания аккаунта.",
-    "Unauthorized": "Вы были отключены. Войдите, чтобы продолжить."
+    "Unauthorized": "Вы были отключены. Войдите, чтобы продолжить.",
+    "captchaRequired": "Произошла ошибка при попытке подтвердить CAPTCHA. Попробуйте позже",
+    "invalidCaptcha": "Нам не удалось подтвердить, что вы человек. Свяжитесь с администратором, если считаете, что это ошибка"
   }
 }
