--- a/packages/client/locales/ru/leo.json
+++ b/packages/client/locales/ru/leo.json
@@ -229,6 +229,8 @@
     "editWeaponExam": "Редактировать экзамены на оружейную лицензию",
     "createWeaponExam": "Создать экзамен на оружейную лицензию",
     "deleteWeaponExam": "Удалить экзамен на оружейную лицензию",
+    "activeWarrants": "Активные ордеры",
+    "noActiveWarrants": "Нет активных ордеров",
     "alert_deleteNote": "Вы уверены, что хотите удалить эту запись? Это действие необратимо",
     "alert_deleteQualification": "Вы уверены, что хотите удалить квалификацию? Это действие необратимо",
     "alert_deleteDLExam": "Вы уверены, что хотите удалить этот экзамен на получение водительских прав? Это действие необратимо",
